--- a/apps/web/src/pages/contributors/index.astro
+++ b/apps/web/src/pages/contributors/index.astro
@@ -294,7 +294,7 @@ Astro.response.headers.set(
                           <img
                             src={issue.user.avatar_url}
                             alt={`Avatar of ${issue.user.login}`}
-                            class="w-6 h-6 rounded-full flex-shrink-0 mt-0.5"
+                            class="w-6 h-6 rounded-full shrink-0 mt-0.5"
                             loading="lazy"
                           />
                           <div class="flex-1 min-w-0">
@@ -351,7 +351,7 @@ Astro.response.headers.set(
                         <img
                           src={pr.user.avatar_url}
                           alt={`Avatar of ${pr.user.login}`}
-                          class="w-6 h-6 rounded-full flex-shrink-0 mt-0.5"
+                          class="w-6 h-6 rounded-full shrink-0 mt-0.5"
                           loading="lazy"
                         />
                         <div class="flex-1 min-w-0">
