--- a/apps/web/src/components/Container.astro
+++ b/apps/web/src/components/Container.astro
@@ -8,7 +8,10 @@ const { class: classNames, ...attrs } = Astro.props;
 
 <div
   {...attrs}
-  class={cn("h-full mx-auto w-full max-w-6xl px-6 sm:px-8 md:px-12 lg:px-16", classNames)}
+  class={cn(
+    "h-full mx-auto w-full max-w-5xl px-5 sm:px-6 md:px-8 lg:px-12",
+    classNames,
+  )}
 >
-  <slot/>
+  <slot />
 </div>
