--- a/apps/web/src/pages/privacy/index.astro
+++ b/apps/web/src/pages/privacy/index.astro
@@ -1,5 +1,5 @@
 ---
-import { getEntry } from "astro:content";
+import { getEntry, render } from "astro:content";
 import Container from "@/components/Container.astro";
 import Prose from "@/components/Prose.astro";
 import Layout from "@/layouts/Layout.astro";
@@ -11,14 +11,16 @@ if (!entry) {
   throw new Error("Page not found");
 }
 
-const formattedDate = new Date(entry.data.updatedAt).toLocaleDateString(
+const formattedDate = new Date(entry.data.lastUpdated).toLocaleDateString(
   "en-US",
   {
     year: "numeric",
     month: "long",
     day: "numeric",
-  }
+  },
 );
+
+const { Content } = await render(entry);
 ---
 
 <Layout
@@ -38,7 +40,7 @@ const formattedDate = new Date(entry.data.updatedAt).toLocaleDateString(
         </div>
 
         <Prose>
-          <div set:html={entry.data.content}/>
+          <Content />
         </Prose>
       </Container>
     </div>
