--- a/apps/web/src/components/BlogHeader.astro
+++ b/apps/web/src/components/BlogHeader.astro
@@ -56,8 +56,8 @@ import WordMark from "./icons/WordMark.astro";
             href="/blog"
             class="text-lg tracking-wider flex items-center gap-2"
           >
-            <WordMark/>
-            <span class="sr-only">astracms</span>
+            <WordMark />
+            <span class="sr-only">AstraCMS</span>
           </a>
         </div>
 
