--- a/apps/web/src/components/Header.astro
+++ b/apps/web/src/components/Header.astro
@@ -15,8 +15,8 @@ import WordMark from "./icons/WordMark.astro";
         href="/"
         class="flex items-center gap-2 transition-opacity duration-300 hover:opacity-70"
       >
-        <WordMark/>
-        <span class="sr-only">astracms</span>
+        <WordMark />
+        <span class="sr-only">AstraCMS</span>
       </a>
 
       <!-- Desktop Nav -->
@@ -103,7 +103,7 @@ import WordMark from "./icons/WordMark.astro";
       >
         Blog
       </a>
-      <hr class="border-border/50 my-3">
+      <hr class="border-border/50 my-3" />
       <a
         href={`${SITE.APP_URL}/login`}
         class="py-3 text-lg transition-colors duration-300 hover:text-muted-foreground"
