--- a/apps/web/src/pages/privacy/index.astro
+++ b/apps/web/src/pages/privacy/index.astro
@@ -11,13 +11,13 @@ if (!entry) {
   throw new Error("Page not found");
 }
 
-const formattedDate = new Date(entry.data.lastUpdated).toLocaleDateString(
+const formattedDate = new Date(entry.data.updatedAt).toLocaleDateString(
   "en-US",
   {
     year: "numeric",
     month: "long",
     day: "numeric",
-  }
+  },
 );
 
 const { Content } = await render(entry);
@@ -40,7 +40,7 @@ const { Content } = await render(entry);
         </div>
 
         <Prose>
-          <Content/>
+          <Content />
         </Prose>
       </Container>
     </div>
