--- a/apps/web/src/components/ChangelogCard.astro
+++ b/apps/web/src/components/ChangelogCard.astro
@@ -22,15 +22,17 @@ const formattedDate = new Date(publishedAt).toLocaleDateString("en-US", {
     class="space-y-1 p-4 border bg-white flex gap-4 flex-col rounded-2xl hover:shadow-xs transition-all duration-300 h-full"
   >
     <div class="w-full border rounded-md overflow-hidden group">
-      {coverImage && (
-        <Image
-          src={coverImage}
-           alt={title}
-           loading="eager"
-          inferSize
-          class='w-full object-cover group-hover:scale-102 transition-all duration-500'
-        />
-      )}
+      {
+        coverImage && (
+          <Image
+            src={coverImage}
+            alt={title}
+            loading="eager"
+            inferSize
+            class="w-full object-cover group-hover:scale-102 transition-all duration-500"
+          />
+        )
+      }
     </div>
     <div class="flex flex-col gap-4 justify-between flex-1">
       <div class="space-y-2">
@@ -41,12 +43,14 @@ const formattedDate = new Date(publishedAt).toLocaleDateString("en-US", {
         <div class="flex items-center gap-2">
           <div class="flex items-center gap-2">
             <Image
-              src={authors[0].image || "/og-blog.jpg"}
-              alt={authors[0].name}
+              src={(authors && authors[0].image) || "/og-blog.jpg"}
+              alt={(authors && authors[0].name) || ""}
               class="size-7 rounded-full"
               inferSize
             />
-            <p class="text-muted-foreground text-sm">{authors[0].name}</p>
+            <p class="text-muted-foreground text-sm">
+              {authors && authors[0].name}
+            </p>
           </div>
           <span class="h-4 w-px bg-gray-300 shrink-0"></span>
           <time
@@ -58,12 +62,14 @@ const formattedDate = new Date(publishedAt).toLocaleDateString("en-US", {
         </div>
 
         <div class="flex items-center gap-2">
-          {tags.map((tag) => (
-            <span class="text-muted-foreground text-sm bg-muted px-2 py-0.5 rounded-md">
-              #
-              {tag.name}
-            </span>
-          ))}
+          {
+            tags &&
+              tags.map((tag) => (
+                <span class="text-muted-foreground text-sm bg-muted px-2 py-0.5 rounded-md">
+                  #{tag.name}
+                </span>
+              ))
+          }
         </div>
       </div>
     </div>
