--- a/apps/web/src/components/ScrollToTop.astro
+++ b/apps/web/src/components/ScrollToTop.astro
@@ -1,7 +1,3 @@
----
-const { class: classNames } = Astro.props;
----
-
 <button
   id="scroll-to-top"
   class="group fixed bottom-16 right-8 lg:bottom-20 lg:right-20 z-50 hidden w-fit hover:text-primary rounded-md border hover:bg-muted p-2 bg-white transition duration-300 text-muted-foreground"
@@ -18,7 +14,7 @@ const { class: classNames } = Astro.props;
       stroke-linecap="round"
       stroke-linejoin="round"
       d="M4.5 10.5 12 3m0 0 7.5 7.5M12 3v18"
-    />
+    ></path>
   </svg>
   <span class="sr-only">Scroll to top</span>
 </button>
